--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -87,9 +87,8 @@
 
     -->
 
-    <script src="/sails.io/sails.io.js"></script>
     <!--SCRIPTS-->
-    
+    <script src="/js/dependencies/sails.io.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
